feat: migrate to springboot 4 and refactor